# Esp32-Game-and-Watch

./: .gitignore  README.md
archived/gandw_single_screen_4button_handheld/: CMakeLists.txt  README.md
archived/gandw_single_screen_4button_handheld/main/: idf_component.yml
archived/gandw_single_screen_4button_handheld/main/lcd_game_emulator/src/gw_sys/: gw_romloader.c  gw_system.c
archived/gandw_single_screen_handheld/: CMakeLists.txt  README.md
archived/gandw_single_screen_handheld/main/: gandw.c
archived/gandw_single_screen_handheld/main/lcd_game_emulator/src/gw_sys/: gw_graphic.c
assets/3d_files/gandw_multi_screen_dpad_handheld/: bottom_case_back.stl  bottom_case_front_part_main.stl  component_mount.stl  dpad.stl  esp32_mount.stl  top_case_back.stl  top_case_front_part_main.stl  top_case_front_part_panel_1.stl  top_case_front_part_panel_2.stl  top_case_front_part_panel_3.stl
assets/3d_files/gandw_multi_screen_handheld/: bottom_case_back.stl  bottom_case_front_complete.stl  bottom_case_front_part_hinge.stl  bottom_case_front_part_main.stl  component_mount.stl  small_button.stl  top_case_front_complete.stl  top_case_front_part_main.stl  top_case_front_part_panel.stl
assets/3d_files/gandw_single_screen_4button_handheld/: back.stl  front.stl  logo.stl
assets/3d_files/gandw_single_screen_handheld/: alarm_acl_button_spacer.stl  back.stl  button.stl  component_mount.stl  front.stl
assets/menu/gandw_cardputer/: generate_menu.py
assets/menu/gandw_cardputer_multi_screen/: generate_menu.py
assets/menu/gandw_multi_screen_dpad_handheld/: generate_menu.py
assets/menu/gandw_multi_screen_handheld/: generate_menu.py
assets/menu/gandw_single_screen_4button_handheld/: generate_menu.py
assets/menu/gandw_single_screen_handheld/: generate_menu.py
gandw_cardputer/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
gandw_cardputer/main/: CMakeLists.txt  audio.c  audio.h  button.c  button.h  game.c  game.h  gandw.c  gandw_battery.c  gandw_battery.h  gandw_buttons.c  gandw_buttons.h  gandw_games.c  gandw_games.h  gandw_keyboard.c  gandw_keyboard.h  gandw_volume.c  gandw_volume.h  i2c.c  i2c.h  idf_component.yml  keyboard.c  menu.c  menu.h  menu.raw  pixel_font.h  volume.c
gandw_cardputer/main/lcd_game_emulator/src/cpus/: sm500op.c
gandw_cardputer/main/lcd_game_emulator/src/gw_sys/: gw_graphic.c  gw_romloader.c  gw_system.h
gandw_cardputer_multi_screen/: CMakeLists.txt  README.md  sdkconfig.old
gandw_cardputer_multi_screen/main/: CMakeLists.txt  audio.c  battery.c  battery.h  button.c  button.h  game.c  game.h  gandw.c  i2c.c  i2c.h  keyboard.c  keyboard.h  menu.c  menu.raw
gandw_cardputer_multi_screen/main/lcd_game_emulator/src/gw_sys/: gw_graphic.c  gw_romloader.c  gw_romloader.h  gw_system.c  gw_system.h
gandw_multi_screen/: README.md  sdkconfig
gandw_multi_screen/main/: CMakeLists.txt  gandw.c
gandw_multi_screen/main/lcd_game_emulator/src/cpus/: sm510op.c
gandw_multi_screen/main/lcd_game_emulator/src/gw_sys/: gw_graphic.c
gandw_multi_screen_dpad_handheld/: CMakeLists.txt  README.md  partitions.csv
gandw_multi_screen_dpad_handheld/main/: CMakeLists.txt  button.c  button.h  game.c  game.h  gandw.c  menu.raw
gandw_multi_screen_dpad_handheld/main/lcd_game_emulator/src/gw_sys/: gw_graphic.c  gw_system.h
gandw_multi_screen_handheld/: CMakeLists.txt  README.md  sdkconfig.old
gandw_multi_screen_handheld/main/: CMakeLists.txt  button.c  button.h  game.c  gandw.c  menu.raw  pixel_font.c
gandw_multi_screen_handheld/main/lcd_game_emulator/src/gw_sys/: gw_graphic.c
gandw_single_screen/: README.md  sdkconfig.old
gandw_single_screen/main/: CMakeLists.txt  gandw.c
gandw_single_screen/main/lcd_game_emulator/src/: lz4_depack.c
gandw_single_screen_4button_handheld/: README.md  partitions.csv  sdkconfig
gandw_single_screen_4button_handheld/main/: CMakeLists.txt  button.c  game.c  gandw.c  menu.c  menu.h  menu.raw  pixel_font.h  volume.h
gandw_single_screen_4button_handheld/main/lcd_game_emulator/src/gw_sys/: gw_graphic.c  gw_graphic.h  gw_system.h
gandw_single_screen_4button_menu_handheld/: CMakeLists.txt  README.md
gandw_single_screen_4button_menu_handheld/main/: CMakeLists.txt  battery.c  battery.h  button.c  game.c  game.h  gandw.c  menu.c
gandw_single_screen_4button_menu_handheld/main/lcd_game_emulator/src/cpus/: sm500op.c
gandw_single_screen_4button_menu_handheld/main/lcd_game_emulator/src/gw_sys/: gw_graphic.c
gandw_single_screen_handheld/: README.md  sdkconfig  sdkconfig.old
gandw_single_screen_handheld/main/: CMakeLists.txt  button.c  button.h  game.c  game.h  gandw.c  menu.c  menu.raw  volume.c
gandw_single_screen_handheld/main/lcd_game_emulator/src/cpus/: sm500op.c
gandw_single_screen_handheld/main/lcd_game_emulator/src/gw_sys/: gw_romloader.c  gw_system.c
