idf_component_register(SRC_DIRS "." "lcd_game_emulator/src" "lcd_game_emulator/src/cpus" "lcd_game_emulator/src/gw_sys"
                       INCLUDE_DIRS "." "lcd_game_emulator/src" "lcd_game_emulator/src/cpus" "lcd_game_emulator/src/gw_sys"
                       EMBED_FILES  
						"Game & Watch Ball.gw"
						"Game & Watch Chef.gw"
						"Game & Watch Egg.gw"
						"Game & Watch Fire Attack.gw"
						"Game & Watch Fire (Silver).gw"
						"Game & Watch Fire (Wide Screen).gw"
						"Game & Watch Flagman.gw"
						"Game & Watch Helmet (CN-17 version).gw"
						"Game & Watch Judge (green version).gw"
						"Game & Watch Lion.gw"
						"Game & Watch Manhole (Gold).gw"
						"Game & Watch Manhole (New Wide Screen).gw"
						"Game & Watch Mario's Cement Factory (New Wide Screen).gw"
						"Game & Watch Mario The Juggler.gw"
						"Game & Watch Mickey Mouse (Wide Screen).gw"
						"Game & Watch Octopus.gw"
						"Game & Watch Parachute.gw"
						"Game & Watch Popeye (Wide Screen).gw"
						"Game & Watch Snoopy Tennis.gw"
						"Game & Watch Tropical Fish.gw"
						"Game & Watch Turtle Bridge.gw"
						"Game & Watch Vermin.gw"
                        "Game & Watch Donkey Kong Jr. (New Wide Screen).gw"
                        "Game & Watch Balloon Fight (Crystal Screen).gw"
                        "Game & Watch Climber (Crystal Screen).gw"
                        "Game & Watch Super Mario Bros. (Crystal Screen).gw"
) 

