idf_component_register(SRC_DIRS "." "lcd_game_emulator/src" "lcd_game_emulator/src/cpus" "lcd_game_emulator/src/gw_sys"
                       INCLUDE_DIRS "." "lcd_game_emulator/src" "lcd_game_emulator/src/cpus" "lcd_game_emulator/src/gw_sys"
                       EMBED_FILES
							"menu.raw"
							"gnw_bjack.gw"
							"gnw_bsweep.gw"
							"gnw_dkong2.gw"
							"gnw_dkong.gw"
							"gnw_gcliff.gw"
							"gnw_ghouse.gw"
							"gnw_mickdon.gw"
							"gnw_opanic.gw"
							"gnw_pinball.gw"
							"gnw_sbuster.gw"
							"gnw_squish.gw"
							"gnw_zelda.gw"
) 

