idf_component_register(SRC_DIRS "." "lcd_game_emulator/src" "lcd_game_emulator/src/cpus" "lcd_game_emulator/src/gw_sys"
                       INCLUDE_DIRS "." "lcd_game_emulator/src" "lcd_game_emulator/src/cpus" "lcd_game_emulator/src/gw_sys"
                       EMBED_FILES  gnwbombsweeper.gw gnwdonkeykong.gw gnwdonkeykong2.gw gnwgoldcliff.gw gnwgreenhouse.gw gnwzelda.gw
) 
