idf_component_register(SRC_DIRS "." "lcd_game_emulator/src" "lcd_game_emulator/src/cpus" "lcd_game_emulator/src/gw_sys"
                       INCLUDE_DIRS "." "lcd_game_emulator/src" "lcd_game_emulator/src/cpus" "lcd_game_emulator/src/gw_sys"
                       EMBED_FILES
                        "menu.raw"
						"Game & Watch Donkey Kong.gw"
						"Game & Watch Green House.gw"						
						"Game & Watch Donkey Kong II.gw"						
						"Game & Watch Bomb Sweeper.gw"
						"Game & Watch Gold Cliff.gw"					
						"Game & Watch Zelda.gw"
) 

