idf_component_register(SRC_DIRS "." "lcd_game_emulator/src" "lcd_game_emulator/src/cpus" "lcd_game_emulator/src/gw_sys"
                       INCLUDE_DIRS "." "lcd_game_emulator/src" "lcd_game_emulator/src/cpus" "lcd_game_emulator/src/gw_sys"
                       EMBED_FILES
                        "menu.raw"
						"Game & Watch Oil Panic.gw"
						"Game & Watch Pinball.gw"						
						"Game & Watch Safe Buster.gw"						
) 

