idf_component_register(SRC_DIRS "." "lcd_game_emulator/src" "lcd_game_emulator/src/cpus" "lcd_game_emulator/src/gw_sys"
                       INCLUDE_DIRS "." "lcd_game_emulator/src" "lcd_game_emulator/src/cpus" "lcd_game_emulator/src/gw_sys"
                       EMBED_FILES  gnwegg.gw gnwfireattack.gw gnwflagman.gw gnwjudge.gw gnwlion.gw gnwmanhole.gw gnwmanholegold.gw gnwmarioscementfactory.gw gnwmickeymouse.gw gnwsnoopytennis.gw
) 
