idf_component_register(SRC_DIRS "." "lcd_game_emulator/src" "lcd_game_emulator/src/cpus" "lcd_game_emulator/src/gw_sys"
                       INCLUDE_DIRS "." "lcd_game_emulator/src" "lcd_game_emulator/src/cpus" "lcd_game_emulator/src/gw_sys"
                       EMBED_FILES  gnwparachute.gw gnwoctopus.gw gnwpopeye.gw gnwchef.gw gnwfire.gw gnwturtlebridge.gw gnwvermin.gw gnwball.gw gnwfiresilver.gw gnwhelmet.gw gnwmariothejuggler.gw gnwtropicalfish.gw
) 
